assets/css/logo.css
@font-face {
  font-family: 'abjdFont';
  src: url('../fonts/smooth-circulars.otf') format('opentype');
}

h1.logo {
  font-family: 'abjdFont';
}

h1.logo a {
  border-bottom: none;
}

span.vflip {
  position: relative;
  display: inline-block;
  right: -0.5px;
  top: 8px;
  -moz-transform: scaleY(-1);
  -o-transform: scaleY(-1);
  -webkit-transform: scaleY(-1);
  transform: scaleY(-1);
  filter: FlipV;
  -ms-filter: "FlipV";
}

